- added more space for about

--- a/src/about.html
+++ b/src/about.html
@@ -49,9 +49,8 @@
       <div class="banner_intro marginb-20rem">
         <div class="banner_title">
           <div class="small_caps_header">ABOUT</div>
-          <h1>What about us?
-          <br>We're new. But we have talent</h1>
-          <p>We're not a scary bunch. We promise.</p>
+          <h1>About us?</h1>
+          <p>Actually we are more about you.</p>
           <br>
         </div>
       </div>
@@ -72,7 +71,8 @@
             <div class="abt_content">
               <h2 class="abt_title">Jin-Sun Hwang</h2>
               <h3>'Wonder Woman'</h3>
-              <p class="about_text">Jin is a UX Designer who likes combining creative thinking, research, best practices and identify new opportunities with innovative and intelligent design solutions</p>
+              <p class="about_text">Jin is a UX Designer who likes combining creative thinking, research, best practices and identify new opportunities with innovative and intelligent design solutions. She has a super human ability to spot the things that everyone else missed.
+                Every team needs a Jin. </p>
             </div>
           </div>
         </div>
@@ -86,7 +86,6 @@
           </div>
           <div id="photo">
             <img src="images/rod.png" class="bell" />
-            <div class="overlay"><img src="images/zarya.png" /></div>
           </div>
         </div>
 
@@ -96,13 +95,46 @@
             <h2 class="abt_title">Nick Montagu</h2>
             <h3>'The Dreamer'</h3>
             <p class="about_text">Nick loves to bring improvement into the working lives of our clients and his team. While often thinking outside of the box, he always pushes for strong collaborations to encourage others to think courageously. He loves to brainstorm, strategise,
-              ideate and mentor. In his downtime, he loves to go scuba diving, explore nature, romanticising his record collection or getting inspired at the cinema or museum.</p>
+              ideate and mentor. In his downtime, he loves to go scuba diving, explore nature, romanticising his record collection or getting inspired at the cinema or museum. He talks the most so you'll probably be speaking to him first.</p>
+          </div>
+        </div>
+
+        <!-- <div class="mid_ct marginc-5rem">
+          <div class="abt_content">
+            <h2 class="abt_title">Shane Grey</h2>
+            <h3>'The Unicorn'</h3>
+            <p class="about_text">Shane description.</p>
+          </div>
+          <div id="photo">
+            <img src="images/rod.png" class="bell" />
           </div>
         </div>
       </div>
+
+      <div class="cut_ct marginc-5rem">
+        <div class="photo"><img class="allimg" src="images/nick.png" /></div>
+        <div class="abt_content">
+          <h2 class="abt_title">Kelvin Chang</h2>
+          <h3>'The Dreamer'</h3>
+          <p class="about_text">Description.</p>
+        </div>
+      </div>
+
+      <div class="mid_ct marginc-5rem">
+        <div class="abt_content">
+          <h2 class="abt_title">Maxime Warnault</h2>
+          <h3>'The Unicorn'</h3>
+          <p class="about_text">Max description.</p>
+        </div>
+        <div id="photo">
+          <img src="images/rod.png" class="bell" />
+        </div>
+      </div> -->
+      </div>
+
       <div class="quote_main">
         <div class="intro_contact ">
-          <div class="link_ct"><a href="contact.html">Get to know us!</a>
+          <div class="link_ct"><a href="contact.html">Tell us about yourself!</a>
           </div>
         </div>
         <div class="shape3 "></div>
