--- a/src/index.html
+++ b/src/index.html
@@ -70,26 +70,26 @@
 
       <div class="unsplash marginb-20rem"><img class="unsplash_image" src="images/sabrituzcu.jpg" alt="Sabri Tuzcu" />
         <div class="unsplash_title">
-          <h1 class="unsplash_h1">We care about process</h1>
-          <p class="unsplash_p">tag line - - tag line</p>
+          <h1 class="unsplash_h1">We make process, technology and people happier</h1>
+          <p class="unsplash_p">[digital innovators]</p>
         </div>
       </div>
       <div class="info_main marginb-20rem">
         <div id="intro" class "container">
           <div class="first">
             <div class="circle"></div>
-            <h2>Heading 1</h2>
-            <p class="info_ctn">What makes FiveFifths different? What do we want to focus on?</p>
+            <h2>You'll love us</h2>
+            <p class="info_ctn">We don't compromise on our quality or your happiness. We're easy to speak with and full of integrity.</p>
           </div>
           <div class="middle">
             <div class="square"></div>
-            <h2>Heading 2</h2>
-            <p class="info_ctn">What does FiveFifths do different? How can we stand out from our competitors?</p>
+            <h2>Better together</h2>
+            <p class="info_ctn">Through listening to your needs you spark our creative minds. Together we discover solutions that you didn't know existed.</p>
           </div>
           <div class="last">
             <div class="circle2"></div>
-            <h2>Header 3</h2>
-            <p class="info_ctn">What can FiveFifths do for your business? What do we offer paraphrased?</p>
+            <h2>Be brave</h2>
+            <p class="info_ctn">When you're looking for change. We're here. </p>
           </div>
         </div>
       </div>
