--- a/src/services.html
+++ b/src/services.html
@@ -48,36 +48,36 @@
       <div class="servicesbanner marginb-20rem">
         <div class="banner_title">
           <div class="small_caps_header">SERVICES</div>
-          <h1>It's about
-          <br>web and design for us</h1>
-          <p>Everything matters.</p>
+          <h1>We iron out
+          <br>your digital wrinkles</h1>
+          <p>Looking sharp ;)</p>
         </div>
       </div>
       <div class="shape"></div>
       <div class="shape2"></div>
 
       <div class="service_para marginc-5rem">
-        <p>Your website is your home. It should be beautifully designed, functional and easy to renovate. It should also be full of compelling, entertaining content, but we'll get to that in a minute.</p>
+        <p>Your websites speaks volumes. We make sure the right people are listening and its simple for them to respond. You found us because you care.</p>
       </div>
       <div class="info_main marginb-20rem">
         <div id="intro" class "container">
           <div class="first">
             <div class="circle"></div>
             <h2>Websites</h2>
-            <p class="info_ctn">We build responsive, performant websites filled with content that converts.</p>
+            <p class="info_ctn">We design websites filled with content that creates an experience. Know your audience better and give them a reason to be in your community.</p>
           </div>
           <div class="middle">
             <div class="square"></div>
-            <h2>UX-Design</h2>
+            <h2>Experience Design</h2>
             <p class="info_ctn">
-              User Experience (UX) We ensure our digital experiences are simple, functional, accessible and delightful.
+              User Experience (UX-CX-SD) We ensure our digital experiences are simple, functional, accessible and delightful. With your help we test these before we spend hours in development. This saves you time (money) and makes for happier developers. Win win.
             </p>
           </div>
           <div class="last">
             <div class="circle2"></div>
             <h2>SEO</h2>
             <p class="info_ctn">
-              Search Engine Optimisation (SEO) We wrap compelling content in semantic smarts that humans and search engines love.
+              Search Engine Optimisation (SEO) Because people might be looking for what you do.... but not you. We make sure your site is easy to find and the right people are talking about it.
             </p>
           </div>
         </div>
@@ -85,52 +85,59 @@
           <div class="first">
             <div class="circle"></div>
             <h2>Analytics & Reporting</h2>
-            <p class="info_ctn">Get a better understanding of your key audience and their behaviours.</p>
+            <p class="info_ctn"> Because a site looks the same if there is 1 or 1,000,000 users. To us it doesn't, we love numbers. We'll give you the insights you need in your language. </p>
           </div>
           <div class="middle">
             <div class="square"></div>
             <h2>Strategy</h2>
-            <p class="info_ctn">We don't just create content. We plan, deliver, analyse and evolve it. Your browser does not support video BIGSOUND 2017 Content + Website
+            <p class="info_ctn">It's all about getting you through your challenges and to your goals. Winning.
             </p>
           </div>
           <div class="last">
             <div class="circle2"></div>
-            <h2>We're unicorns</h2>
-            <p class="info_ctn">Our designers specialise in interface design. Turning your ideas into reality with elegance</p>
+            <h2>Friends</h2>
+            <p class="info_ctn">We bring together the right people for your project. So if you need copy, media, development etc. We've got you covered.</p>
           </div>
         </div>
       </div>
 
       <div class="service_para marginc-5rem">
-        <p>We are a team of UX Designers ready to meet your needs and the needs of your users. We specialise in research all the way to design. Need that vision turned into a reality? We deliver unique and creative design solutions.</p>
+        <p>Our team blends their individual strengths into a cocktail of awesome collaboration. We're a tapestry of ideas and insights based on our collective experience and wisdom.<br> We love to share our knowledge and learn from yours.</p>
       </div>
       <div class="service_flex_row marginc-5rem">
-        <h2>CAPABILITIES</h2></div>
+        <h2>Things we do (AKA what you want)</h2></div>
       <div class="skills_container marginb-20rem">
+        <!-- <div class="skills_title">User Experience</div> -->
         <ul class="skills">
           <li>Stakeholder Interviews</li>
           <li>User Interviews</li>
           <li>Contextual Inquiries</li>
           <li>Competitive Analysis</li>
-        </ul>
-        <ul class="skills">
           <li>User Personas</li>
           <li>User Flows</li>
           <li>Information Architecture</li>
-          <li>Sitemap</li>
-          <li>Strategic Assessement</li>
         </ul>
         <ul class="skills">
+          <li>Sitemap</li>
+          <li>Strategic Assessement</li>
           <li>Sketching</li>
           <li>Interaction design</li>
           <li>Lo & hi-fi wireframes</li>
           <li>Prototyping</li>
           <li>Usability testing & iterative design</li>
         </ul>
+        <ul class="skills">
+          <li>SEO Optimisation</li>
+          <li>PPC Campaigns</li>
+          <li>Analytics</li>
+          <li>Landing Pages</li>
+          <li>Conversion Strategies</li>
+          <li>Content Marketing</li>
+        </ul>
       </div>
       <div class="quote_main">
         <div class="intro_contact ">
-          <div class="link_ct"> <a href="contact.html">Get to know us!</a>
+          <div class="link_ct"><a href="contact.html">Get to know us!</a>
           </div>
         </div>
         <div class="shape3 "></div>
